<resources>
    <string name="app_name">penyewaan mobil dan motor</string>
    <string name="TODO">images</string>
    <string name="textView">motor</string>
    <string name="textView2">mobil</string>
    <string name="imageButton4">logomotor</string>
    <string name="imageButton5">logo</string>
    <string name="textView3">Toyota Avanza</string>
    <string name="textView4">Motor matic</string>
    <string name="textView5">Motor bebek</string>
    <string name="textView6">SILAHKAN MASUKAN NOMOR HP :</string>
    <string name="editText">+62</string>
    <string name="textView7">AJUKAN PERMINTAAN PENYEWAAN MOBIL:</string>
    <string name="editText2"> </string>
    <string name="button">KIRIM</string>
    <string name="textView8">Toyota Innova</string>
    <string name="textView9">Honda Mobilio</string>
    <string name="textView10">SILAHKAN MASUKAN NOMOR HP :</string>
    <string name="editText3">+62</string>
    <string name="textView11">AJUKAN PERMINTAAN PENYEWAAN MOTOR:</string>
    <string name="button2">KONFRIMASI</string>
    <string name="imagebutton"> </string>
    <string name="editText6">082138398329</string>
    <string name="textView12">TUNGGU KONFIRMASI DARI PIHAK</string>
    <string name="textView13">PENYEWAAN MOBIL DAN MOTOR</string>
    <string name="textView14">JIKA DISETUJUI, SILAHKAN DATANG KE LOKASI</string>
    <string name="textView15">PENYEWAAN MOBIL DAN MOTOR</string>
    <string name="textView16">DENGAN MEMBAWA KARTU IDENTITAS</string>
    <string name="textView17">TUNGGU KONFIRMASI DARI PIHAK</string>
    <string name="textView18">PENYEWAAN MOBIL DAN MOTOR</string>
    <string name="textView19">JIKA DISETUJUI, SILAHKAN DATANG KE LOKASI</string>
    <string name="textView20">PENYEWAAN MOBIL DAN MOTOR</string>
    <string name="textView21">DENGAN MEMBAWA KARTU IDENTITAS</string>
    <string name="button4">LOKASI PENYEWAAAN MOTOR DAN MOBIL</string>
    <string name="editText5">082138398329</string>
    <string name="button5">LOKASI PENYEWAAAN MOTOR DAN MOBIL</string>
    <string name="button6">KEMBALI</string>
    <string name="button7">KEMBALI</string>
    <string name="button8">KEMBALI</string>
    <string name="button9">KEMBALI</string>
    <string name="button11">KELUAR</string>
    <string name="button10">KELUAR</string>
    <string name="button12">HOME</string>
    <string name="button13">HOME</string>
    <string name="button14">ABOUT</string>
    <string name="textView27">APLIKASI INI DIGUNAKAN HANYA UNTUK</string>
    <string name="todo">TODO</string>
    <string name="textView23">MENGAJUKAN PERMINTAAN PENYAWAAN KENDARAAN</string>
    <string name="textView24">PENYEWAAN MOBIL DAM MOTOR</string>
    <string name="textView25">Semarang</string>
    <string name="textView26">HAK CIPTA PEMBUAT APLIKASI</string>
    <string name="button15">KEMBALI</string>
    <string name="fnama">Nama</string>
    <string name="falamat">Alamat</string>
    <string name="fmerk">Merk</string>
    <string name="ftglpeminjaman">Tanggal Peminjaman</string>
    <string name="ftglpengembalian">Tanggal Pengembalian</string>
    <string name="callservice">Call Service</string>
    <string name="perbarui">Perbarui</string>
    <string name="lokasi">Lokasi</string>
    <string name="title_activity_maps">Map</string>
</resources>
