<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.andra.myapplication.mobil2">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingBottom="@dimen/left_vertical"
        android:paddingLeft="@dimen/left_horizontal"
        android:paddingRight="@dimen/right_horizontal"
        android:paddingTop="@dimen/right_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/txtedmobilnama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fnama"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtedmobilalamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/falamat"
            android:inputType="textMultiLine"
            android:lines="4" />

        <EditText
            android:id="@+id/txtedmobilmerk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fmerk"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/txtedmobiltglpeminjaman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ftglpeminjaman"
            android:inputType="textPersonName"
            android:onClick="tglPeminjamanMobil"
            android:focusable="false"/>

        <EditText
            android:id="@+id/txtedmobiltglpengembalian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ftglpengembalian"
            android:inputType="textPersonName"
            android:onClick="tglPengembalianMobil"
            android:focusable="false"/>

        <Button
            android:id="@+id/btnedmobilkonfirmasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="perbaruiDataMobil"
            android:text="@string/perbarui" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
