<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.andra.myapplication.mobil1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/left_horizontal">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fnama"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtdmobilnama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/left_vertical"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/falamat"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtdmobilalamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/left_vertical"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fmerk"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtdmobilmerk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/left_vertical"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ftglpeminjaman"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtdmobiltglpeminjaman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/left_vertical"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ftglpengembalian"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtdmobiltglpengembalian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>