<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.andra.myapplication.MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="136dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="281dp"
        android:contentDescription="@string/TODO"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/images" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="85dp"
        android:layout_height="86dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="107dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/imageButton4"
        android:onClick="firstImageButton"
        app:layout_constraintEnd_toStartOf="@+id/imageButton5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/logomotor" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="78dp"
        android:layout_height="82dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageButton4"
        android:layout_marginEnd="51dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/imageButton5"
        android:onClick="secondImageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton4"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageButton5"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/textView"
        app:layout_constraintStart_toStartOf="@+id/imageButton4"
        app:layout_constraintTop_toBottomOf="@+id/imageButton4" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignEnd="@+id/imageButton5"
        android:layout_alignRight="@+id/imageButton5"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="36dp"
        android:text="@string/textView2"
        app:layout_constraintEnd_toEndOf="@+id/imageButton5"
        app:layout_constraintTop_toBottomOf="@+id/imageButton5" />

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:onClick="about"
        android:text="@string/button14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
